makko/monitoring/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: mosquitto
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - image: eclipse-mosquitto:latest
        name: mosquitto
        volumeMounts:
        - name: config
          mountPath: /mosquitto/config/
        - name: data
          mountPath: /mosquitto/data/
        - name: log
          mountPath: /mosquitto/log/
        ports:
        - containerPort: 9001
        - containerPort: 1883
        resources:
          limits:
            cpu: "1"
            memory: 128Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 50m
            memory: 64Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: mosquitto-config
          readOnly: false
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto-data
          readOnly: false
      - name: log
        persistentVolumeClaim:
          claimName: mosquitto-log
          readOnly: false
      securityContext:
        fsGroup: 0
        runAsUser: 0
