makko/monitoring/mosquitto/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mosquitto
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "mosquitto.senk0.com"
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
